unpackaged/main/default/objects/Financing__c/Financing__c.object-meta.xml
<CustomObject>
    <label>Financing</label>
    <nameField>
        <displayFormat>FIN-{0000}</displayFormat>
        <label>FID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>