unpackaged/main/default/objects/Financing__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financing</relationshipLabel>
    <relationshipName>Financing1</relationshipName>
    <type>Lookup</type>
</CustomField>