unpackaged/main/default/objects/Financing__c/fields/Type_of_Debt__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Debt__c</fullName>
    <label>Type of Debt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Subordinate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>